@@ -33,8 +33,6 @@
 
 _GLIBCXX_BEGIN_NAMESPACE(__gnu_cxx)
 
-  // XXX GLIBCXX_ABI Deprecated
-  // Should be inlined, and not exported.
   _Atomic_word 
   __attribute__ ((__unused__))
   __exchange_and_add(volatile _Atomic_word* __mem, int __val)
