@@ -1,3 +1,10 @@
+2006-08-31  Benjamin Kosnik  <bkoz@redhat.com>
+
+	PR libstdc++/28671
+	* include/bits/atomicity.h (__exchange_and_add): Declare only.
+	(__atomic_add): Same.
+	* config/cpu/generic/atomicity_builtins/atomicity.h: Remove comment.
+	
 2006-08-30  Benjamin Kosnik  <bkoz@redhat.com>
             Richard Guenther  <rguenther@suse.de>
 	
